--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
     max-width: 100%;
     max-height: 100%;
     width: 10%;
+    margin-right: 5%;
 }
 
 .batmanimg img {
@@ -36,7 +37,7 @@ body {
 .name {
     max-width: 100%;
     max-height: 100%;
-    width: 90%;
+    width: 85%;
     display: flex;
     text-align: left;
     vertical-align: middle;
