--- a/styles.css
+++ b/styles.css
@@ -160,11 +160,25 @@ section {
     height: 80vh;
 }
 
+.section-container {
+    display: flex;
+    gap: 2rem;
+    height: 80%;
+}
+
 .section__pic-container{
     display: flex;
+    margin: auto 0;
+}
+
+.profile-pic {
+    height: 500px;
+    width: 500px;
+}
+
+.about-pic {
     height: 400px;
     width: 400px;
-    margin: auto 0;
 }
 
 .section__text{
@@ -178,6 +192,9 @@ section {
 
 .section__text__p1 {
     text-align: center;
+}
+
+.section__text__p2{
     font-size: 1.75rem;
     margin-bottom: 1rem;
 }
@@ -228,4 +245,215 @@ section {
 
 }
 
-/* 59:00 */
+.btn-color-1 {
+    background: none;
+}
+
+.btn-color-2:hover {
+    background: black;
+}
+
+.btn-color-1:hover,
+.btn-color-2 {
+    background: rgb(53, 53, 53);
+    color: white;
+}
+
+.btn-color-1:hover {
+    border: white 0.1rem solid;
+}
+
+.btn-container {
+    gap: 1rem;
+}
+
+/* about section */
+
+#about {
+    position: relative;
+}
+
+.about-containers {
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+.about-details-container {
+    justify-content: center;
+    flex-direction: column;
+}
+
+.about-containers, .about-details-container {
+    display: flex;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.about-pic {
+    border-radius: 3rem;
+}
+
+.arrow {
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+}
+
+.details-container {
+    padding: 1.5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center; 
+    height: 60%;
+}
+
+/* Experience Section */
+
+#experience {
+    position: relative;
+}
+
+.experience-sub-title {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 0.5rem;
+}
+
+.experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 0.5rem;
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: center;
+    vertical-align: middle;
+}
+
+.article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+article .icon {
+    cursor: default;
+}
+
+.company-logo {
+    height: 90px;
+    width: 170px;
+}
+
+/* projects */
+
+#projects {
+    position: relative;
+    margin-top: 3rem ;
+}
+
+.color-container {
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+}
+
+.project-img {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+}
+
+.position-img {
+    border-radius: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.invictus {
+    width: 90%;
+    height: 90%;
+}
+
+.intern,
+.ieee {
+    width: 50%;
+    height: 50%;
+}
+
+.project-title {
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn {
+    color: black;
+    border-color: rgb(163, 163, 163);
+}
+
+/* positions */
+
+#positions {
+    position: relative;
+}
+
+/* contact  */
+
+#contact {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1 rem solid;
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-size: larger;
+}
+
+.contact-icon {
+    cursor: default;
+}
+
+.email-icon,
+.insta-icon {
+    height: 2.5rem;
+}
+
+/* footer */
+footer {
+    height: 26vh;
+    margin: 0 1rem;
+}
+
+footer p {
+    text-align: center;
+}
