Added blog and website hit counter

--- a/styles.css
+++ b/styles.css
@@ -457,3 +457,15 @@ footer {
 footer p {
     text-align: center;
 }
+
+/* counter */
+
+.counter {
+    font-size: 1rem;
+    text-align: right;
+    margin-top: 2rem;
+}
+
+.counter-img {
+    margin-top: 1%;
+}
